TCV-101 Fixed nav padding on small screens

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -51,11 +51,11 @@ body {
         margin-bottom: 0;
         line-height: 40px;
         padding-bottom: 6px;
-        @media (min-width: $screen-md-min) { padding-left: 15px; }
+        @media (min-width: $screen-sm-min) { padding-left: 15px; }
     }
     
     .nav-icon {
-        @media (min-width: $screen-md-min) { padding-right: 15px; }
+        @media (min-width: $screen-sm-min) { padding-right: 15px; }
     
     }
 }
